fixed missalignment in hero social proof mobile

--- a/css/home.scss
+++ b/css/home.scss
@@ -43,7 +43,6 @@
     p {
         margin-top: var(--spacing-xxs);
         font-weight: 500;
-        text-align: right;
     }
 }
 
